installation as first update

--- a/karmen-pws-connector.service
+++ b/karmen-pws-connector.service
@@ -5,6 +5,7 @@ After=network.target
 
 [Service]
 ExecStart=/home/pi/karmen-pws-connector/update.sh
+WorkingDirectory=/home/pi/karmen-pws-connector
 RemainAfterExit=true
 Type=oneshot
 
